# uActors

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/src/: Main.cpp  Ring2.cpp
src/actor/: Actor.h  Context.h  LocalContext.h  Main.cpp  Message.cpp  Message.h  PID.h  Props.h  Spawn.cpp  Spawn.h  basics.h
src/actors/: Message.h
uActors/: CMakeLists.txt
uActors/include/: Context.h  Dispatcher.h  LocalContext.h  Mailbox.h  Message.h  PID.h  Process.h  ProcessRegistry.h  Props.h  Spawn.h  basics.h  uQueue.h
uActors/src/: Message.cpp  ProcessRegistry.cpp  Spawn.cpp
